# sentinel_threat

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  prometheus.yml  requirements.txt  test_data.py
ai/: behavioral_analysis.py
ai/models/: threat_detector.py
core/: CMakeLists.txt  ThreatDetectionEngine.cpp  ThreatDetectionEngine.hpp
dashboard/: app.py
distributed/: processor.py
docs/: api.md  architecture.md  deployment.md  security.md  usage.md
security/: config.yaml  integrations.py  utils.py  waf_edr_config.yaml  zero_trust.py
